###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "antlr4-cpp-runtime", version = "4.12.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "ctpg_package",
  url = "https://github.com/peter-winter/ctpg/archive/refs/tags/v1.3.7.tar.gz",
  sha256 = "6cc7c34de4983e21070599fd5693b65ef08cd5c8f42612e43b47eda723623429",
  build_file = "@//:ctpg.BUILD",
  strip_prefix = "ctpg-1.3.7/include"
)


http_archive(
  name = "peglib_package",
  url = "https://github.com/yhirose/cpp-peglib/archive/refs/tags/v1.8.8.tar.gz",
  sha256 = "3019d8084a146562fe2fd4c71e3226ac6e3994e8cee21cab27b3cd5a86bcef34",
  build_file = "@//:peglib.BUILD",
  strip_prefix = "cpp-peglib-1.8.8"
)


http_archive(
  name = "boost_package",
  url = "https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.gz",
  sha256 = "2575e74ffc3ef1cd0babac2c1ee8bdb5782a0ee672b1912da40e5b4b591ca01f",
  build_file = "@//:boost.BUILD",
  strip_prefix = "boost_1_86_0/boost",
  add_prefix = "exa_udf_boost"
)
